--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div class="container">
       <h1>Javascript Guess Game</h1>
       <h4>
-        In this guess you are required to guess my password, you only have 3
+        In this guess game you are required to guess my password, you only have 3
         guess limits. This means that if you fail to guess my password you will
         loose and you will no longer be my friend
       </h4>
