--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./favicon.ico" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <title>JS GUESS GAME</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
@@ -88,9 +88,9 @@
     <div class="container">
       <h1>Javascript Guess Game</h1>
       <h4>
-        In this guess game you are required to guess my password, you only have 3
-        guess limits. This means that if you fail to guess my password you will
-        loose and you will no longer be my friend
+        In this guess game you are required to guess my password, you only have
+        3 guess limits. This means that if you fail to guess my password you
+        will loose and you will no longer be my friend
       </h4>
 
       <input type="text" placeholder="Enter your guess" class="guess__input" />
